--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html ng-app="app">
   <head>
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="bower_components/normalize.css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body ng-controller="MainController">
     <h1>My WebApp Seed</h1>
     <h2>{{test}}</h2>
     <input type="text" ng-model="test">
-    <script src="js/lib/angular.min.js"></script>
+    <script src="bower_components/angular/angular.min.js"></script>
     <script src="build/bundle.js"></script>
   </body>
 </html>
